updated apiendpoints and swagger
